google work-sans fonts added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architects responsive website</title>
-</head>
-<body>
 
-    <header>
+    <!-- CSS link added -->
+     <link rel="stylesheet" href="./styles/architect.css">
+
+     <!-- Google fonts CDN -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+</head>
+
+<body class="work-sans-font">
+
+    <header> 
+        <nav>
+            <h3>G3 Architects</h3>
+        </nav>
 
     </header>
 
@@ -16,7 +29,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
     
 </body>
