--- a/index.html
+++ b/index.html
@@ -17,10 +17,27 @@
 
 <body class="work-sans-font">
 
-    <header> 
-        <nav>
-            <h3>G3 Architects</h3>
+    <header class="bg-light"> 
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex ">
+                <li class="nav-item"><a href="" class="link-icon">About</a></li>
+                <li class="nav-item"><a href="" class="link-icon">Home</a></li>
+                <li class="nav-item"><a href="" class="link-icon">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="link-icon">Login</a></li>
+            </ul>
         </nav>
+        
+        <div class="banner">
+            <div class="banner-container">
+                <h1 class="banner-heading">Brand New Group of Architects</h1>
+                <p class="banner-description text-greylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+                
+            </div>
+            <img src="./images/banner.png" alt="" class="banner-img">
+
+        </div>
 
     </header>
 
