teams and feature section compleat with css

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <img src="./images/team4.png" alt="">
             </div>
             <div class="our-feature">
-                <h3 class="feature-heading"><span id="first" class="text-greylight">Quick list</span><span class="second"> of Our</span><span class="third"> Features</span></h3>
+                <h3 class="feature-heading section-title"><span id="first" class="text-greylight">Quick list</span><span class="second"> of Our</span><span class="text-primary"> Features</span></h3>
             <p class="feature-describtion text-greylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
             </div>
