some facts compleat without responsive

--- a/index.html
+++ b/index.html
@@ -57,6 +57,41 @@
         </section>
 
 
+        <!-- some facts card section -->
+         <section class="section-title">Some Facts</section>
+         <p class="text-greylight fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+         <div class="fact-container">
+            <div class="fact-card display-flex">
+                <div>
+                    <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                <h4 class="fact-number">54</h4>
+                <h6 class="fact-paragraph">Awards Winnings</h6>
+                </div>
+            </div>
+            <div class="fact-card display-flex">
+                <div>
+                    <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                <h4 class="fact-number">1458</h4>
+                <h6 class="fact-paragraph">Project Finished</h6>
+                </div>
+            </div>
+            <div class="fact-card display-flex">
+                <div>
+                    <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                <h4 class="fact-number">590</h4>
+                <h6 class="fact-paragraph">Clients Worked</h6>
+                </div>
+            </div>
+            <div class="fact-card display-flex">
+                <div>
+                    <img src="./images/icons/email.png" alt="" class="fact-icon">
+                <h4 class="fact-number">22578</h4>
+                <h6 class="fact-paragraph">Email Send</h6>
+                </div>
+            </div>
+         </div>
+
+
     </main>
 
     <footer>
