some responsive edit

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </header>
 
     <main>
+        <!-- teams and features section -->
         <section class="teams display-flex">
             <div class="team-img-container">
                 <img src="./images/team1.png" alt="tow architecture discousion this topic">
@@ -64,41 +65,85 @@
         </section>
 
 
+        <!-- love feature section -->
+        <section class="love-section display-flex">
+            <div>
+                <div id="love-section-heading-border" class="section-title">Features you willbr <br>love & enjoy</div>
+                <p id="love-section-p" class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or
+                    randomised words which don't look even</p>
+
+                    <!-- love feature section card -->
+                     <div class="love-feature-card">
+                        <h4 class="love-feature-card-title">Dexktop & Mobile Version</h4>
+                        <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="love-feature-card">
+                        <h4 class="love-feature-card-title">Drag & Drop Builder</h4>
+                        <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="love-feature-card">
+                        <h4 class="love-feature-card-title">Awesome Modern Design</h4>
+                        <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+                     <div class="love-feature-card">
+                        <h4 class="love-feature-card-title">Super Easy to Edit</h4>
+                        <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                     </div>
+            </div>
+            <div class="love-feature-architech">
+                <img src="./images/architect.png" alt="">
+                <button id="exparience-badge">
+                    <span id="experience-year">10+Year</span>
+                    <br>
+                    <span id="mini">Experience</span>
+                </button>
+            </div>
+        </section>
         <!-- some facts card section -->
-        <section class="section-title">Some Facts</section>
-        <p class="text-greylight fact-description">There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form, by injected humour, or randomised words which don't look
-            even</p>
-        <div class="fact-container">
-            <div class="fact-card display-flex">
-                <div>
-                    <img src="./images/icons/ribon.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">54</h4>
-                    <h6 class="fact-paragraph">Awards Winnings</h6>
+        <section>
+            <div class="fact-contant">
+                <h1 class="section-title">Some Facts</h1>
+                <p class="text-greylight fact-description">There are many variations of passages of Lorem Ipsum
+                    available,
+                    but
+                    the majority have suffered alteration in some form, by injected humour, or randomised words which
+                    don't
+                    look
+                    even</p>
+            </div>
+
+            <div class="fact-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h6 class="fact-paragraph">Awards Winnings</h6>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h6 class="fact-paragraph">Project Finished</h6>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h6 class="fact-paragraph">Clients Worked</h6>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h6 class="fact-paragraph">Email Send</h6>
+                    </div>
                 </div>
             </div>
-            <div class="fact-card display-flex">
-                <div>
-                    <img src="./images/icons/projects.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">1458</h4>
-                    <h6 class="fact-paragraph">Project Finished</h6>
-                </div>
-            </div>
-            <div class="fact-card display-flex">
-                <div>
-                    <img src="./images/icons/customers.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">590</h4>
-                    <h6 class="fact-paragraph">Clients Worked</h6>
-                </div>
-            </div>
-            <div class="fact-card display-flex">
-                <div>
-                    <img src="./images/icons/email.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">22578</h4>
-                    <h6 class="fact-paragraph">Email Send</h6>
-                </div>
-            </div>
-        </div>
+        </section>
 
 
     </main>
