all compleat with responsive

--- a/index.html
+++ b/index.html
@@ -69,27 +69,32 @@
         <section class="love-section display-flex">
             <div>
                 <div id="love-section-heading-border" class="section-title">Features you willbr <br>love & enjoy</div>
-                <p id="love-section-p" class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the
+                <p id="love-section-p" class="text-graylight">There are many variations of passages of Lorem Ipsum
+                    available, but the
                     majority have suffered alteration in some form, by injected humour, or
                     randomised words which don't look even</p>
 
-                    <!-- love feature section card -->
-                     <div class="love-feature-card">
-                        <h4 class="love-feature-card-title">Dexktop & Mobile Version</h4>
-                        <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                     </div>
-                     <div class="love-feature-card">
-                        <h4 class="love-feature-card-title">Drag & Drop Builder</h4>
-                        <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                     </div>
-                     <div class="love-feature-card">
-                        <h4 class="love-feature-card-title">Awesome Modern Design</h4>
-                        <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                     </div>
-                     <div class="love-feature-card">
-                        <h4 class="love-feature-card-title">Super Easy to Edit</h4>
-                        <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                     </div>
+                <!-- love feature section card -->
+                <div class="love-feature-card">
+                    <h4 class="love-feature-card-title">Dexktop & Mobile Version</h4>
+                    <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="love-feature-card">
+                    <h4 class="love-feature-card-title">Drag & Drop Builder</h4>
+                    <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="love-feature-card">
+                    <h4 class="love-feature-card-title">Awesome Modern Design</h4>
+                    <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="love-feature-card">
+                    <h4 class="love-feature-card-title">Super Easy to Edit</h4>
+                    <p class="text-graylight">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
             </div>
             <div class="love-feature-architech">
                 <img src="./images/architect.png" alt="">
@@ -143,13 +148,29 @@
                     </div>
                 </div>
             </div>
+
+            <!-- sponsor section -->
+            <div class="sponsor-container">
+                <div class="sponsor-contant">
+                    <h2 class="sponsor-heading section-title">Our Sponspors</h2>
+                    <p class="sponsor-p text-graylight">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration.</p>
+                </div>
+                <div class="sponsor-cardbox">
+                    <img src="./images/sponsors/spotify.png" alt="">
+                    <img src="./images/sponsors/amazon.png" alt="">
+                    <img src="./images/sponsors/google.png" alt="">
+                    <img src="./images/sponsors/telerama.png" alt="">
+                    <img src="./images/sponsors/figma.png" alt="">
+                </div>
+            </div>
         </section>
-
-
     </main>
 
-    <footer>
 
+    <!-- footer tag start -->
+    <footer>
+        <p class="text-graylight">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 
 </body>
